Update: Agregue un boton delete, para eliminar tareas listas

--- a/To-Do List/index.html
+++ b/To-Do List/index.html
@@ -12,7 +12,7 @@
     <main>
         <div id="lista_crear">
             <input type="text" placeholder="Ingrese tarea">
-            <button type="reset">Agregar</button>
+            <button type="reset" id="addTask">Agregar</button>
         </div>
         <div id="tareas">
             
